Opened 5 years ago
Closed 5 years ago
#15628 closed bug (fixed)
Distored Rendering of OS
Reported by: | Paradoxon | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/Graphics/intel_extreme/ironlake | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
since my update from hrev53658 to 53714 my display is distored i have the follwing controller device Display controller (VGA compatible controller, VGA controller) [3|0|0]
vendor 8086: Intel Corporation device 0046: Core Processor Integrated Graphics Controller
My Resolution ist 1366 x 768.
The display is kind of scaled (wrong aspect Ratio?) in the x - Axis ... this way that i cant acces the Deskbar anymore..
changing the resolution to 1024 x 768 kind of helped to display the Deskbar, but the aspectratio is still messed up...
Everything worked find before my update
Attachments (6)
Change History (19)
comment:1 by , 5 years ago
Owner: | set to |
---|---|
Status: | new → assigned |
comment:2 by , 5 years ago
by , 5 years ago
Attachment: | syslog.distored added |
---|
by , 5 years ago
Attachment: | syslog.crash_onworspaceswitch added |
---|
comment:4 by , 5 years ago
Since hrev53717 on switch from 1024 x 768 (was my default now) to 1366 x 768. it was still scaled wrong (deskbar out of screen) on swith to a different workspace the screen turned black on switch to a nother workspace it showed crazy colored lines... and then it crashed (kerneldebuggerland... sady i didnt took a photo)
comment:5 by , 5 years ago
This is not KDL but an app_server crash. You can type "save-report" from there to save a debug report.
comment:7 by , 5 years ago
The part with the screen turning black:
intel_set_display_mode(14947x24936)
I fear this is something to be fixed in app_server side, if it gives us a mode like this, what should we do?
comment:8 by , 5 years ago
for your changes ... it rendered the system complete unusable.. :-D only flickering colored line (i can add a picture and syslog later since i have some trouble accesing them :))
by , 5 years ago
Attachment: | syslog.crazy_lines added |
---|
by , 5 years ago
Attachment: | _20200121_074713.JPG added |
---|
comment:9 by , 5 years ago
If you like i can try to write diffrent values to registers (guided over irc) ... in the kdl... if this helps you... (i dont have any knowledge there yet... but if it helps i can learn ;-))
comment:10 by , 5 years ago
Yes, the problem is it takes hours of checking and writing values in the registers even if I'm doing it directly sitting in front of the computer. I don't think doing it over IRC is reasonably practical :(
We should meet at some coding sprint or other event where I can borrow your computer and then I may be able to find the problem.
I will see if I can reproduce it here one one of my old laptops or borrow ones from other people around...
comment:11 by , 5 years ago
Ok, so today I noticed that I can reproduce the issue on my machine. So I will be able to investigate this. It is a newer generation but there is exactly the same problem.
The flickering colored lines are actually "better". What happened before is we were setting a broken video mode on the secondary display, but the LVDS panel was showing the primary one so this was not visible. Now, we set a broken mode on the primary display, and we can see what we are doing.
I will continue investigating this and fix the modesetting. I hope it will also help with other problems.
comment:12 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
comment:13 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed (for real this time) in hrev53772.
Please include syslogs before/after update.