intel_extreme: do not change panel fitter registers in later devices

This code was accidentally re-enabled in hrev53690.

Should fix #15628.